--- a/example/index.html
+++ b/example/index.html
@@ -44,6 +44,6 @@
 	</main>
 
 	<script src="./script.js"></script>
-	<script src="../history.js"></script>
+	<script src="./history.js"></script>
 </body>
 </html>
