--- a/example/index.html
+++ b/example/index.html
@@ -4,8 +4,9 @@
 	<meta charset="utf-8" />
 	<meta name="viewport" content="width=device-width,initial-scale=1" />
 	<title>Calculator</title>
-
 	<link rel="stylesheet" href="./style.css" />
+	<script src="./script.js" defer></script>
+	<script src="./history.js" defer></script>
 </head>
 <body>
 	<main class="container">
@@ -42,8 +43,5 @@
 			</div>
 		</section>
 	</main>
-
-	<script src="./script.js"></script>
-	<script src="./history.js"></script>
 </body>
 </html>
